- 10/21/2024  ○ Updated main site (v2.3.06)  ○ Online Banking   § Fixed an issue where the deposit 1-3 textboxes were not unlocking after entering a loan amount  ○ Print Checks   § Fixed an issue where if there was more than 1 check saved, it would not appear  ○ Edit Item   § Fixed an error when trying to load data in from businessUsed and not businessUsedID.  ○ Updated to main site (v2.3.06a)  ○ Pushed to git (v2.3.06a) - 10/18/2024  ○ Dry Run  ○ Online Banking   § Now possible to enter decimals into the textboxes   § Submitted data now loads in if program is exited out  ○ Check Writing System   § Fixed an issue where the direct deposit slip would print out only for deposit 3, changed it to deposit 2   § An error message now displays if a student has tried to save a check without entering their name and/or dollar amount.  ○ Badge Creator Print   § Data table is now invisible  ○ Print.css   § Changed badge print width to 5.8cm from 6cm   § Changed badge photo width from 120px to 170px  ○ EMS:   § Fixed a loaddata error that would occur when loading in students from power design. Updated SQL database to remove job id 59 (photographer) from all #188 accounts. This was probably a leftover from when the business was Times.  ○ Magic Computer   § Direct deposit button will now let you remove the DD if hit accidentally  ○ Voting System   § Fixed an issue with the cancel vote button not redirecting correctly to the previous page.

--- a/css/Styles.print.css
+++ b/css/Styles.print.css
@@ -41,7 +41,7 @@ input[type=number] {
         border: 2px solid black;
         border-radius: 0px;
         text-align: left;
-        width: 6cm;
+        width: 5.8cm;
         height: 8cm;
         padding-left: 12px;
         padding-right: 12px;
@@ -57,7 +57,7 @@ input[type=number] {
         border: 2px solid black;
         border-radius: 0px;
         text-align: left;
-        width: 6cm;
+        width: 5.8cm;
         height: 8cm;
         padding-left: 12px;
         padding-right: 12px;
@@ -73,7 +73,7 @@ input[type=number] {
         border: 2px solid black;
         border-radius: 0px;
         text-align: left;
-        width: 6cm;
+        width: 5.8cm;
         height: 8cm;
         padding-left: 12px;
         padding-right: 12px;
@@ -89,7 +89,7 @@ input[type=number] {
         border: 2px solid black;
         border-radius: 0px;
         text-align: left;
-        width: 6cm;
+        width: 5.8cm;
         height: 8cm;
         padding-left: 12px;
         padding-right: 12px;
@@ -198,14 +198,14 @@ input[type=number] {
     }*/
 
     .badge_photo {
-        border: 2px solid gray;
+        /*border: 2px solid gray;*/
         position: absolute;
-        width: 120px;
+        width: 170px;
         height: 120px;
         top: 45px;
         left: 55px;
         float: right;
-        border: 1px solid black;
+        /*border: 1px solid black;*/
     }
 
     .d-none {
